Update Compiler and Surefire Plugins